--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest --detectOpenHandles --forceExit"
   },
   "dependencies": {
     "next": "12.0.4",
@@ -14,10 +15,16 @@
     "react-dom": "17.0.2"
   },
   "devDependencies": {
+    "@types/jest": "^27.0.3",
     "@types/node": "16.11.11",
     "@types/react": "17.0.37",
+    "@types/styled-components": "^5.1.18",
+    "babel-plugin-styled-components": "^2.0.2",
     "eslint": "7.32.0",
     "eslint-config-next": "12.0.4",
-    "typescript": "4.5.2"
+    "jest": "^27.4.5",
+    "supertest": "^6.1.6",
+    "ts-jest": "^27.1.1",
+    "typescript": "^4.5.4"
   }
 }
