--- a/package.json
+++ b/package.json
@@ -9,22 +9,26 @@
     "test": "jest --detectOpenHandles --forceExit"
   },
   "dependencies": {
+    "@wojtekmaj/enzyme-adapter-react-17": "^0.6.6",
     "next": "12.0.4",
     "next-redux-wrapper": "^7.0.5",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
   "devDependencies": {
+    "@types/enzyme": "^3.10.10",
+    "@types/enzyme-adapter-react-16": "^1.0.6",
     "@types/jest": "^27.0.3",
     "@types/node": "16.11.11",
     "@types/react": "17.0.37",
     "@types/styled-components": "^5.1.18",
     "babel-plugin-styled-components": "^2.0.2",
+    "enzyme": "^3.11.0",
     "eslint": "7.32.0",
     "eslint-config-next": "12.0.4",
     "jest": "^27.4.5",
     "supertest": "^6.1.6",
-    "ts-jest": "^27.1.1",
+    "ts-jest": "^27.1.2",
     "typescript": "^4.5.4"
   }
 }
