--- a/package.json
+++ b/package.json
@@ -9,12 +9,19 @@
     "test": "jest --detectOpenHandles --forceExit"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.7.1",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.6",
     "next": "12.0.4",
     "next-redux-wrapper": "^7.0.5",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-redux": "^7.2.6",
+    "styled-components": "^5.3.3"
   },
   "devDependencies": {
+    "@types/enzyme": "^3.10.10",
+    "@types/enzyme-adapter-react-16": "^1.0.6",
     "@types/jest": "^27.0.3",
     "@types/node": "16.11.11",
     "@types/react": "17.0.37",
