--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "test": "jest --detectOpenHandles --forceExit"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.7.1",
     "next": "12.0.4",
     "next-redux-wrapper": "^7.0.5",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-redux": "^7.2.6",
     "styled-components": "^5.3.3"
   },
   "devDependencies": {
