--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "test": "jest --detectOpenHandles --forceExit"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.7.1",
     "@wojtekmaj/enzyme-adapter-react-17": "^0.6.6",
     "next": "12.0.4",
     "next-redux-wrapper": "^7.0.5",
@@ -27,6 +28,8 @@
     "eslint": "7.32.0",
     "eslint-config-next": "12.0.4",
     "jest": "^27.4.5",
+    "jsdom": "16.7.0",
+    "jsdom-global": "3.0.2",
     "supertest": "^6.1.6",
     "ts-jest": "^27.1.2",
     "typescript": "^4.5.4"
