--- a/.github/workflows/develop-github-actions.yml
+++ b/.github/workflows/develop-github-actions.yml
@@ -1,35 +1,21 @@
-name: learn-github-actions
-on:
-    push:
-      branches: [ master, dev ]
-    pull_request:
-      branches: [ master ]
-      paths:
-        - "**.js"
-      paths-ignore:
-        - "doc/**"
-jobs:
-  build:
-    strategy:
-      matrix:
-        node-version: [10.x, 12.x]
+name: Upload Website
 
+on:
+  push:
+    branches:
+    - "master"
+
+jobs:
+  deploy:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout source code
-        uses: actions/checkout@v2
-        
-      - name: My First Step
-        run:
-          npm install
-          npm test
-          npm build
-
-      - name: Cache yarn dependencies
-        uses: actions/cache@v1
-        id: yarn-cache
-        with:
-          path: node_modules
-          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-yarn-
+    - uses: actions/checkout@master
+    - uses: jakejarvis/s3-sync-action@master
+      with:
+        args: --acl public-read --follow-symlinks --delete
+      env:
+        AWS_S3_BUCKET: ${{ secrets.AWS_S3_BUCKET }}
+        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        AWS_REGION: 'us-west-1'   # optional: defaults to us-east-1
+        SOURCE_DIR: 'public'      # optional: defaults to entire repository
