--- a/package.json
+++ b/package.json
@@ -6,25 +6,44 @@
     "build": "next build && next export",
     "start": "next start",
     "lint": "next lint",
-    "test": "jest --detectOpenHandles --forceExit"
+    "test": "jest --detectOpenHandles --forceExit",
+    "pre-commit": "lint-staged",
+    "prepare": "husky install"
+  },
+  "lint-staged": {
+    "**/*.{ts,tsx,js}": [
+      "eslint . --ext .js,.jsx,.ts,.tsx --max-warnings 0 --no-ignore",
+      "bash -c tsc --noEmit",
+      "prettier --ignore-unknown --write"
+    ]
   },
   "dependencies": {
+    "@emotion/react": "^11.8.1",
+    "@emotion/styled": "^11.8.1",
     "@reduxjs/toolkit": "^1.7.2",
     "next": "12.0.4",
     "next-redux-wrapper": "^7.0.5",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-redux": "^7.2.6"
+    "react-redux": "^7.2.6",
+    "styled-components": "^5.3.3"
   },
   "devDependencies": {
     "@types/jest": "^27.0.3",
     "@types/node": "16.11.11",
     "@types/react": "17.0.37",
     "@types/styled-components": "^5.1.18",
+    "@typescript-eslint/eslint-plugin": "^5.12.1",
     "babel-plugin-styled-components": "^2.0.2",
     "eslint": "7.32.0",
     "eslint-config-next": "12.0.4",
+    "eslint-config-prettier": "^8.4.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-simple-import-sort": "^7.0.0",
+    "husky": "^7.0.4",
     "jest": "^27.4.5",
+    "lint-staged": "^12.3.4",
+    "prettier": "^2.5.1",
     "supertest": "^6.1.6",
     "ts-jest": "^27.1.1",
     "typescript": "^4.5.4"
