--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "next-redux-wrapper": "^7.0.5",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-hook-form": "^7.27.1",
     "react-redux": "^7.2.6",
     "styled-components": "^5.3.3"
   },
