--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-hook-form": "^7.27.1",
+    "react-icons": "^4.3.1",
     "react-redux": "^7.2.6",
     "styled-components": "^5.3.3"
   },
