--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "@fortawesome/fontawesome-svg-core": "^1.3.0",
     "@fortawesome/free-brands-svg-icons": "^6.0.0",
     "@fortawesome/free-solid-svg-icons": "^6.0.0",
-    "@fortawesome/react-fontawesome": "^0.1.17",
+    "@fortawesome/react-fontawesome": "^0.1.18",
     "@reduxjs/toolkit": "^1.7.2",
     "date-fns": "^2.28.0",
     "next": "12.0.4",
@@ -33,7 +33,8 @@
     "react-hook-form": "^7.27.1",
     "react-icons": "^4.3.1",
     "react-redux": "^7.2.6",
-    "styled-components": "^5.3.3"
+    "styled-components": "^5.3.3",
+    "swiper": "^8.1.0"
   },
   "devDependencies": {
     "@types/jest": "^27.0.3",
