--- a/package.json
+++ b/package.json
@@ -25,15 +25,13 @@
     "@fortawesome/free-solid-svg-icons": "^6.0.0",
     "@fortawesome/react-fontawesome": "^0.1.17",
     "@reduxjs/toolkit": "^1.7.2",
-    "date-fns": "^2.28.0",
-
     "@wojtekmaj/enzyme-adapter-react-17": "^0.6.6",
-
-
-    "next": "12.0.4",
+    "axios": "^0.26.1",
+    "date-fns": "^2.28.0",
+    "next": "^12.1.5",
     "next-redux-wrapper": "^7.0.5",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "react": "^18.0.0-rc.3",
+    "react-dom": "^18.0.0-rc.3",
     "react-hook-form": "^7.27.1",
     "react-icons": "^4.3.1",
     "react-redux": "^7.2.6",
@@ -57,11 +55,10 @@
     "eslint-plugin-simple-import-sort": "^7.0.0",
     "husky": "^7.0.4",
     "jest": "^27.4.5",
-    "lint-staged": "^12.3.4",
-    "prettier": "^2.5.1",
-
     "jsdom": "16.7.0",
     "jsdom-global": "3.0.2",
+    "lint-staged": "^12.3.4",
+    "prettier": "^2.5.1",
     "supertest": "^6.1.6",
     "ts-jest": "^27.1.2",
     "typescript": "^4.5.4"
