--- a/package.json
+++ b/package.json
@@ -28,15 +28,16 @@
     "@wojtekmaj/enzyme-adapter-react-17": "^0.6.6",
     "axios": "^0.26.1",
     "date-fns": "^2.28.0",
-    "next": "^12.1.5",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.6",
+    "next": "^12.1.5",
     "next-redux-wrapper": "^7.0.5",
     "react": "^18.0.0-rc.3",
     "react-dom": "^18.0.0-rc.3",
     "react-hook-form": "^7.27.1",
     "react-icons": "^4.3.1",
     "react-redux": "^7.2.6",
+    "react-table": "^7.8.0",
     "styled-components": "^5.3.3"
   },
   "devDependencies": {
